syntax = "proto3";

package rplus.wallet;

option go_package = "rplus/wallet;wallet";
option csharp_namespace = "RPlusGrpc.Wallet";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

service WalletService {
  rpc AccruePoints (AccruePointsRequest) returns (AccruePointsResponse);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
  rpc GetHistory (GetHistoryRequest) returns (GetHistoryResponse);
  rpc GetMonthlyPoints (GetMonthlyPointsRequest) returns (GetMonthlyPointsResponse);
  rpc ReverseTransaction (ReverseTransactionRequest) returns (ReverseTransactionResponse);
  rpc ReservePoints (ReservePointsRequest) returns (ReservePointsResponse);
  rpc CommitReserve (CommitReserveRequest) returns (CommitReserveResponse);
  rpc CancelReserve (CancelReserveRequest) returns (CancelReserveResponse);
  rpc Check (CheckRequest) returns (CheckResponse);
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
}

message CreateWalletRequest {
  string user_id = 1;
  string currency = 2; // e.g. "Points"
}

message CreateWalletResponse {
  string id = 1;
  string user_id = 2;
  int64 balance = 3;
}

message AccruePointsRequest {
  string user_id = 1;
  int64 amount = 2;
  string operation_id = 3;
  string source = 4;
  string description = 5;
  map<string, string> metadata = 6;
  google.protobuf.Timestamp timestamp = 7;
  string request_id = 8;
  string signature = 9;
  string source_type = 10;     // "activity", "purchase", "referral", "admin"
  string source_category = 11; // More detailed category
}

message AccruePointsResponse {
  string operation_id = 1;
  int64 balance_after = 2;
  string status = 3;
  string error_code = 4;
}

message GetBalanceRequest {
  string user_id = 1;
}

message GetBalanceResponse {
  int64 balance = 1;
}

message GetHistoryRequest {
  string user_id = 1;
  int32 limit = 2;
  string cursor = 3;
  string source = 4;
}

message GetHistoryResponse {
  string next_cursor = 1;
  repeated WalletTransactionDto items = 2;
}

message WalletTransactionDto {
  string operation_id = 1;
  int64 amount = 2;
  int64 balance_before = 3;
  int64 balance_after = 4;
  string source = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp processed_at = 8;
  string description = 9;
  map<string, string> metadata = 10;
}

message ReverseTransactionRequest {
  string user_id = 1;
  string original_operation_id = 2;
  string reason = 3;
  string request_id = 4;
}

message ReverseTransactionResponse {
  bool success = 1;
  int64 balance_after = 2;
  string error_code = 3;
}

message ReservePointsRequest {
  string user_id = 1;
  int64 amount = 2;
  string operation_id = 3;
  string source = 4;
  string description = 5;
  map<string, string> metadata = 6;
  google.protobuf.Timestamp timestamp = 7;
  string request_id = 8;
  string signature = 9;
}

message ReservePointsResponse {
  string operation_id = 1;
  int64 balance_after = 2;
  string status = 3;
  string error_code = 4;
}

message CommitReserveRequest {
  string user_id = 1;
  string operation_id = 2;
}

message CommitReserveResponse {
  bool success = 1;
  int64 balance_after = 2;
  string error_code = 3;
}

message CancelReserveRequest {
  string user_id = 1;
  string operation_id = 2;
}

message CancelReserveResponse {
  bool success = 1;
  int64 balance_after = 2;
  string error_code = 3;
}

message CheckRequest {
  string user_id = 1;
  string operation_id = 2;
}

message CheckResponse {
  string status = 1;
  int64 balance = 2;
  int64 reserved_balance = 3;
  string last_error = 4;
}

// Monthly points aggregation for motivational discount calculation
message GetMonthlyPointsRequest {
  string user_id = 1;
  int32 year = 2;
  int32 month = 3;
  repeated string source_types = 4; // Filter by source types (empty = all)
}

message GetMonthlyPointsResponse {
  int64 total_points = 1;
  int32 transaction_count = 2;
  bool success = 3;
  string error = 4;
}
